# duck-lk

./: .envrc  .gitignore  Cargo.toml  Makefile  README.md  flake.nix  opencode.json
.agents/: bulk-export-roadmap.md
.github/workflows/: MainDistributionPipeline.yml  release.yml
skills/duck-lk/: SKILL.md
src/: cache.rs  credential.rs  experimental_sql.rs  lib.rs  replacement_scan.rs  scalar_helpers.rs  types.rs  vtab_cache_clear.rs  vtab_cache_info.rs  vtab_query.rs  vtab_sync.rs
test/sql/: duck_lk.test  duck_lk_arity.test
