[package]
name = "duck_lk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "duck_lk"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
arrow-array = "56"
arrow-schema = "56"
arrow-select = "56"
chrono = "0.4"
dirs = "6"
duckdb = { version = "=1.4.4", features = ["loadable-extension"] }
labkey-rs = "0.1.0"
libduckdb-sys = "=1.4.4"
parquet = { version = "56", default-features = false, features = ["arrow"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
url = "2"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
unwrap_used = "deny"

[dev-dependencies]
tempfile = "3"
